# game_of_life

./: .clang-format  CMakeLists.txt  README.md  main.cpp
src/: DrawableTableWidget.cpp  DrawableTableWidget.hpp  MainWindow.cpp  MainWindow.hpp
